# libevl

./: meson.build
benchmarks/: hectic.c  latmus.c
eshi/: meson.build  version.c
include/: meson.build
include/evl/: atomic.h  compiler.h  evl.h  heap.h  tube.h
include/placeholders/valgrind/: valgrind.h
lib/: heap.c  init.c  meson.build  mutex.c  thread.c  version.c
lib/arch/arm/include/asm/evl/: syscall.h
lib/arch/arm64/include/asm/evl/: syscall.h
lib/arch/x86/include/asm/evl/: syscall.h
meson/: aarch64-linux-gnu  arm-linux-gnueabihf  collect-uapi.sh  setup-uapi.sh
tests/: meson.build  poll-flags.c  poll-multiple.c  ring-spray.c
tests/compile-tests/: meson.build
utils/: evl-ps.c  evl.c  meson.build
